--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>書曼的相簿</title>
+<title>書曼的相簿_金門逍遙遊</title>
 <style type="text/css">
 body {
 	text-align: center;
